--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/icons">
         <file alias="bitcoin">res/icons/ColossusCoin2.png</file>
-        <file alias="coinbg">res/icons/ColossusCoin2256.png</file>
+        <file alias="coinbg">res/icons/ColossusCoin2-256.png</file>
         <file alias="yuno">res/icons/ColossusCoin2-Yuno.png</file>
         <file alias="address-book">res/icons/address-book.png</file>
         <file alias="quit">res/icons/quit.png</file>
@@ -12,6 +12,7 @@
         <file alias="connect_2">res/icons/connect2_16.png</file>
         <file alias="connect_3">res/icons/connect3_16.png</file>
         <file alias="connect_4">res/icons/connect4_16.png</file>
+        <file alias="circuit">res/icons/circuit.png</file>
         <file alias="transaction_0">res/icons/transaction0.png</file>
         <file alias="transaction_confirmed">res/icons/transaction2.png</file>
         <file alias="transaction_conflicted">res/icons/transaction_conflicted.png</file>
@@ -25,8 +26,8 @@
         <file alias="editpaste">res/icons/editpaste.png</file>
         <file alias="editcopy">res/icons/editcopy.png</file>
         <file alias="add">res/icons/add.png</file>
-        <file alias="bitcoin_testnet">res/icons/ColossusCoin2.png</file>
-        <file alias="toolbar_testnet">res/icons/ColossusCoin2-16.png</file>
+        <file alias="bitcoin_testnet">res/icons/PayCon.png</file>
+        <file alias="toolbar_testnet">res/icons/PayCon-16.png</file>
         <file alias="edit">res/icons/edit.png</file>
         <file alias="history">res/icons/history.png</file>
         <file alias="overview">res/icons/overview.png</file>
