--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -26,8 +26,8 @@
         <file alias="editpaste">res/icons/editpaste.png</file>
         <file alias="editcopy">res/icons/editcopy.png</file>
         <file alias="add">res/icons/add.png</file>
-        <file alias="bitcoin_testnet">res/icons/PayCon.png</file>
-        <file alias="toolbar_testnet">res/icons/PayCon-16.png</file>
+        <file alias="bitcoin_testnet">res/icons/FlyCoin.png</file>
+        <file alias="toolbar_testnet">res/icons/FlyCoin-16.png</file>
         <file alias="edit">res/icons/edit.png</file>
         <file alias="history">res/icons/history.png</file>
         <file alias="overview">res/icons/overview.png</file>
