--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -58,6 +58,11 @@
         <file alias="social">res/icons/social.png</file>
 		<file alias="block">res/icons/block.png</file>
 		<file alias="statistics">res/icons/stats.png</file>
+	<file alias="cb-checked">res/icons/cb-checked.png</file>
+        <file alias="radio">res/icons/r.png</file>
+        <file alias="radio-hover">res/icons/r-hover.png</file>
+        <file alias="radio-checked">res/icons/r-checked.png</file>
+        <file alias="radio-checked-hover">res/icons/r-checked-hover.png</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="about">res/images/about.png</file>
